--- a/manulife_azure.yml
+++ b/manulife_azure.yml
@@ -51,6 +51,7 @@
       name: myVM
       vm_size: Standard_DS1_v2
       admin_username: azureuser
+      admin_password: redhat123@!
       ssh_password_enabled: false
       ssh_public_keys:
         - path: /home/azureuser/.ssh/authorized_keys
