--- a/manulife_java_rhel.yml
+++ b/manulife_java_rhel.yml
@@ -1,5 +1,15 @@
 ---
-- hosts: all
+## This Playbook Tested on Ansible Navigoter (AAP 2.1)  Lab environment is DO4374 ##
+## Please Read below comments Before execute the playbook ##
+
+# Depended packages are available on git repo (jokin-jo/manulife.git)
+# This playbook Designed to execute on Red Hat Enterprise Linux 8.x host(s)
+# Make Sure all connection-related parameters(user permission, connection credentials..etc)  are set and  all hosts are reachable by Ansible 
+# Please Make sure the below package is available on project directory before executing the playbook
+    #  jenkins-1.409.1-1.1.noarch.rpm.tar.gz
+
+
+- hosts: "{{ host_name }}"
   tasks: 
    - name: Install java in redhat server
      when: ansible_os_family == "RedHat"
@@ -27,6 +37,8 @@
       dest: /var/
       remote_src: yes
 
+# To showcase the use-case of an arbitrary module bellow task used ansible.builtin.command to install the rpm 
+
    - name: Install Jenkins rpm 
      ansible.builtin.command: yum localinstall /var/jenkins-1.409.1-1.1.noarch.rpm -y 
 
@@ -38,14 +50,12 @@
        enabled: true 
      register: service_stat
 
-
    - name: debug the service status 
      debug:
         var: service_stat
 
+# From here the java patching/updating process is starting 
 
-
-  # process to patch Java 
    - name: Stop Javapjdk depended service(s) 
      ansible.builtin.service:
        name: jenkins.service
@@ -55,7 +65,6 @@
      ansible.builtin.package:
        name: java-17-openjdk
        state: present
-      
   
    - name: Verify the updated version of JDK
      ansible.builtin.command: java -version
@@ -65,14 +74,12 @@
      ansible.builtin.debug:
        msg: "{{ java_patch }}"
 
-
    - name: Start Javapjdk depended service(s) 
      ansible.builtin.service:
        name: jenkins.service
        state: started
        enabled: true 
      register: service_update
-
 
    - name: verify the service is running after JDK patching 
      debug:
