--- a/sql_PaaS.yml
+++ b/sql_PaaS.yml
@@ -32,4 +32,4 @@
     password: "RedHat123@!"
     resourcegroup: manulife_test_1
     sqldb: manulife_db  
-    sqlserver: manulife_sql_server
+    sqlserver: manulifesqlserver
