--- a/manulife_azure.yml
+++ b/manulife_azure.yml
@@ -61,7 +61,7 @@
     azure_rm_virtualmachine:
       resource_group: "{{ resource_group_name }}"
       name: "{{ vm_name }}"
-      vm_size: {{ vm_size }}
+      vm_size: "{{ vm_size }}"
       admin_username: "{{ admin_user }}"
       admin_password: "{{ admin_pswd }}"
       image:
