--- a/azureservicebus.yml
+++ b/azureservicebus.yml
@@ -8,9 +8,8 @@
   - name: Create a Service Bus Topic
     azure_rm_servicebustopic:
       resource_group: "your-resource-group"
-      namespace_name: "your-service-bus-namespace"
+      namespace: "your-service-bus-namespace"
       name: "your-topic-name"
-      default_message_time_to_live: "P60D"
-      auto_delete_on_idle: "P10675199DT2H48M5.4775807S" # This represents "Never" using a duration format
-      duplicate_detection_history_time_window: "PT10M"
+      default_message_time_to_live_seconds: "P60D"
+      auto_delete_on_idle_in_seconds: "P10675199DT2H48M5.4775807S" # This represents "Never" using a duration format
       state: "present"
